--- a/assets/css/legal.css
+++ b/assets/css/legal.css
@@ -112,10 +112,10 @@ main {
 .contactBox {
   display: flex;
   align-items: center;
-  gap: 1.5rem;
+  gap: 1rem;
   width: fit-content;
   margin: 0 auto;
-  padding: 1.5rem 2rem;
+  padding: 1.3rem;
   background: var(--bg-secondary);
   border: 1px solid var(--border);
   border-radius: 12px;
@@ -135,8 +135,8 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   background: var(--border);
   border-radius: 12px;
   color: var(--accent);
@@ -149,8 +149,8 @@ main {
 }
 
 .contactIconWrapper svg {
-  width: 24px;
-  height: 24px;
+  width: 20px;
+  height: 20px;
 }
 
 .contactInfo {
@@ -169,6 +169,6 @@ main {
 
 .contactValue {
   color: var(--text-primary);
-  font-size: 1.05rem;
+  font-size: 1rem;
   font-weight: 700;
 }
