Se quita página de una novela porque anuncio aún no está echo

--- a/layouts/staff/list.html
+++ b/layouts/staff/list.html
@@ -64,7 +64,7 @@
               {{ end }}
             {{ end }}
           {{ else }}
-            Sin proyectos asignados
+            Próximamente
           {{ end }}
         </ul>
       </div>
