--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -232,6 +232,18 @@
             <div class="downloadFormat">EPUB</div>
           </a>
         </div>
+        
+        <div class="webReaderContainerModal">
+          <a
+            href="#"
+            class="webReaderBtnModal"
+            id="webReaderLink"
+            style="display: none;"
+          >
+            <svg class="readerBtnIcon"><use href="/img/svg/novela.svg#bookIcon" /></svg>
+            <span>Leer Online</span>
+          </a>
+        </div>
       </div>
     </div>
     {{ end }}
