--- a/assets/css/webReader.css
+++ b/assets/css/webReader.css
@@ -51,7 +51,7 @@ html, body.webReaderBody {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   background-color: var(--reader-bg);
   color: var(--reader-text);
   font-family: var(--reader-font);
@@ -197,6 +197,11 @@ html, body.webReaderBody {
 
 .webReaderContent i, .webReaderContent em {
   font-style: italic;
+}
+
+.webReaderContent figure {
+  margin: 0;
+  padding: 0;
 }
 
 .webReaderContent img {
@@ -418,11 +423,4 @@ html, body.webReaderBody {
 .tocBtn:hover {
   background: rgba(128, 128, 128, 0.2);
   border-color: var(--reader-ui-border);
-}
-
-.readerSectionTitle {
-  margin: 3rem 0 1rem 0;
-  padding-bottom: 1rem;
-  border-bottom: 2px solid var(--reader-ui-border);
-  text-align: center;
 }
