--- a/layouts/lector/read.html
+++ b/layouts/lector/read.html
@@ -31,6 +31,9 @@
         <button id="btnBack" class="readerBtn" aria-label="Volver">
           <svg viewBox="0 0 24 24" width="24" height="24"><path fill="currentColor" d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/></svg>
         </button>
+        <div class="readerHeaderLogo" style="display: flex; align-items: center; margin-left: 10px;">
+          <svg width="42" height="42" style="color: var(--reader-ui-text);"><use href="/img/svg/main.svg#logo"></use></svg>
+        </div>
         <div style="flex-grow: 1;"></div>
         <button id="btnToc" class="readerBtn" aria-label="Índice" style="margin-right: 10px;">
           <svg viewBox="0 0 24 24" width="24" height="24"><path fill="currentColor" d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm0-8h2V7H3v2zm4 4h14v-2H7v2zm0 4h14v-2H7v2zM7 7v2h14V7H7z"/></svg>
