--- a/layouts/lector/read.html
+++ b/layouts/lector/read.html
@@ -100,6 +100,16 @@
             </div>
           </div>
 
+          <div class="settingGroup">
+            <div class="toggleControl">
+              <label for="pagedModeToggle" style="margin-bottom: 0;">Modo Paginado</label>
+              <label class="switch">
+                <input type="checkbox" id="pagedModeToggle">
+                <span class="slider round"></span>
+              </label>
+            </div>
+          </div>
+
         </div>
       </aside>
 
